<resources>
    <string name="app_name">PhonePay-Clone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_offers">Offers</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_payment">Scan &amp; Pay</string>
    <string name="title_my_account">My Account</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_invite">Invite</string>
    <string name="title_notification">Notification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_mobile">Mobile</string>
    <string name="txt_electricity">Electricity</string>
    <string name="txt_credit_card">Credit Card</string>
    <string name="txt_broadband">Broadband</string>
    <string name="txt_insurance">Insurance</string>
    <string name="txt_water">Water</string>
    <string name="txt_recharge_pay_bills">Recharge &amp; Pay Bills</string>
    <string name="txt_buy_on_phonepe">Buy on PhonePe</string>
    <string name="txt_gift_cards">Gift Cards</string>
    <string name="txt_red_bus">Red Bus</string>
    <string name="txt_bhim_upi_id">BHIM UPI ID</string>
    <string name="txt_bank_account">Bank Account</string>
    <string name="txt_wallets">Wallets</string>
    <string name="txt_saved_cards">Saved Cards</string>
    <string name="txt_manage_autopay">Manage AutoPay</string>
    <string name="txt_invite_and_earn">Invite &amp; Earn</string>
    <string name="txt_language">Language</string>
    <string name="txt_english">English</string>
    <string name="txt_help">Help</string>
    <string name="txt_policies">Policies</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_recharge">Recharge</string>
    <string name="txt_bill_pay">Bill Pay</string>
    <string name="txt_send_money">Send Money</string>
    <string name="txt_travel">Travel</string>
    <string name="txt_groceries">Groceries</string>
    <string name="txt_food">Food</string>
    <string name="txt_movies">Movies</string>
    <string name="txt_others">Others</string>
    <string name="txt_terms_conditions">*T&amp;C Apply</string>
    <string name="txt_discount_flat">Flat</string>
    <string name="txt_discount_30_percent">30%</string>
    <string name="txt_discount_25_percent">25%</string>
    <string name="txt_discount_10_percent">10%</string>
    <string name="txt_discount_cashback">Cashback*</string>
    <string name="txt_discount_onwards">Onwards</string>
    <string name="txt_offline_merchants">Offline merchants</string>
    <string name="rupees">₹</string>
    <string name="txt_online_merchants">Online Merchants</string>
    <string name="txt_offer">Offer</string>
    <string name="txt_popular_recharge_and_bill_pay_offers">Popular Recharge and bill pay offers</string>
    <string name="txt_money_transfers">Money Transfers</string>
    <string name="txt_to_contact">To Contact</string>
    <string name="txt_to_account">To Account</string>
    <string name="txt_to_self">To self</string>
    <string name="txt_split_bill">Split Bill</string>
    <string name="txt_check_bank_balance">Check Bank Balance</string>
    <string name="txt_wallet_topup">Wallet Topup</string>
    <string name="txt_add_reminders">Add Reminders</string>
    <string name="txt_request_money">Request Money</string>
    <string name="txt_mobile_number">9518788067</string>
    <string name="txt_user_name">Sainath Hiwale</string>
    <string name="txt_name_initials">DB</string>
    <string name="txt_month">Month</string>
    <string name="txt_filters">Filters</string>
    <string name="title_loans">Loans</string>
    <string name="txt_personal_loan">Personal Loan</string>
    <string name="txt_mutual_fund_loan">Mutual Fund Loan</string>
    <string name="txt_gold_loan">Gold Loan</string>
    <string name="txt_credit_score">Credit Score</string>
    <string name="title_precious_metals">Gold, Silver &amp; Platinum</string>
    <string name="txt_daily_gold">Daily Gold with ₹10</string>
    <string name="txt_buy_gold">Buy Gold</string>
    <string name="txt_daily_silver">Daily Silver with ₹10</string>
    <string name="txt_daily_platinum">Daily Platinum</string>

</resources>
