<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/bg_profile"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="10dp"
                    android:text="@string/txt_name_initials"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/txt_mobile_number"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/txt_user_name"
                        android:textColor="@android:color/darker_gray"
                        android:layout_marginLeft="16dp" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_person_pin_grey_800_24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_bhim_upi_id"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_bank" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_bank_account"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_wallet_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_wallets"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_payment_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_saved_cards"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_autopay_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_manage_autopay"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_invite_and_earn_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_invite_and_earn"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_language_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/txt_language"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/txt_english"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_help_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_help"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_policies_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/txt_policies"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>