<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OffersFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_viewPager"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="@color/colorPrimary">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager_offers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/layoutDots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/view_pager_offers"
                    android:layout_marginTop="-50dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_categories"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_recharge_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_recharge"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_bill_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_bill_pay"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_send_money_grey" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_send_money"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_travel_grey" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_travel"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_grocery_store_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_groceries"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_restaurant_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_food"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_movies_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_movies"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_others_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/txt_others"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_popular_recharge_and_bill_pay_offers"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bill_pay_offers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_offline_merchants"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_offline_merchants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_online_merchants"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_online_merchants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>